<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="player"
            type="com.rosseti.domain.entity.PlayerEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0dp"
            app:layout_constraintBottom_toTopOf="@+id/new_game_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_32dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginEnd="@dimen/dimen_32dp"
                    android:text="@string/player_name"
                    android:textSize="@dimen/dimen_12sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/player_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_32dp"
                    android:layout_marginEnd="@dimen/dimen_32dp"
                    android:text="@{player.name}"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="@dimen/dimen_20sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_32dp"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:layout_marginEnd="@dimen/dimen_32dp"
                    android:text="@string/games"
                    android:textSize="@dimen/dimen_12sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/input_layout_matches"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_32dp"
                    android:layout_marginEnd="@dimen/dimen_32dp"
                    android:text="@{player.matches}"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="@dimen/dimen_20sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_32dp"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:layout_marginEnd="@dimen/dimen_32dp"
                    android:text="@string/scores"
                    android:textSize="@dimen/dimen_12sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/input_layout_scores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_32dp"
                    android:layout_marginEnd="@dimen/dimen_32dp"
                    android:text="@{player.scores}"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="@dimen/dimen_20sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/header_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/txt_adversary"
                            style="@style/textTitleMatchesStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/dimen_16dp"
                            android:text="@string/adversary"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txt_result"
                            style="@style/textTitleMatchesStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="@dimen/dimen_16dp"
                            android:text="@string/result"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/header_view" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/new_game_button"
            style="@style/ButtonStyle"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:layout_marginBottom="@dimen/dimen_24dp"
            android:text="@string/new_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>